<resources>
    <string name="app_name">Custom Dictionary</string>

    <string name="value_any_category">All food</string>
    <string name="value_any_city">Anywhere</string>
    <string name="value_any_price">Any price</string>

    <string name="price_1">$</string>
    <string name="price_2">$$</string>
    <string name="price_3">$$$</string>

    <string name="label_category">Category</string>
    <string name="label_city">City</string>
    <string name="label_price">Price</string>
    <string name="label_sort_by">Sort By</string>

    <string name="fmt_num_ratings" translatable="false">(%d)</string>
    <string name="all_restaurants">All Restaurants</string>
    <string name="header_filters">Filter</string>
    <string name="search">Search</string>

    <string name="sort_by_rating">Sort by Rating</string>
    <string name="sort_by_popularity">Sort by Popularity</string>
    <string name="sort_by_price">Sort by Price</string>

    <string name="sorted_by_rating">sorted by rating</string>
    <string name="sorted_by_price">sorted by price</string>
    <string name="sorted_by_popularity">sorted by popularity</string>

    <string name="add_random_items">Add Random Items</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_all">Delete All</string>
    <string name="divider_bullet">•</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="message_no_results">Oops, couldn\'t find any results\nthat matched your filter</string>
    <string name="message_no_reviews">Be the first to leave a review!</string>
    <string name="hint_review">How was your experience?</string>
    <string name="submit">Submit</string>
    <string name="filter_add_review">Add review</string>
    <string name="all_dictionaries">All Dictionaries</string>
    <string name="all_words">All Words</string>
    <string name="sort_by_word_id">Sort By Word</string>
    <string name="sort_by_word_owner">Sort By Owner</string>
    <string name="sort_by_word_last_updater">Sort By Last Updater</string>
    <string name="sort_by_word_most_recent_update">Sort By Most Recent Update</string>
    <string name="sort_by_word_part_of_speech">Sort By Part Of Speech</string>
    <string name="sort_by_dictionary_owner">Sort By Owner</string>
    <string name="sort_by_dictionary_title">Sort By Title</string>
    <string name="sort_by_dictionary_last_updater">Sort By Last Updater</string>
    <string name="sort_by_dictionary_most_recent_update">Sort By Most Recent Update</string>
    <string name="dictionary_item_image_content_desc">Image for the dictionary</string>
    <string name="message_no_words">Be the first to create a word!</string>
    <string name="filter_add_word">Add word</string>
    <string name="dialog_add_word">Add word</string>
    <string name="dialog_edit_word">Edit %s</string>
    <string name="hint_word_definition">Define your word</string>
    <string name="hint_word_name">Word</string>
    <string name="hint_word_example_sentence">Use your word in a sentence</string>
    <string name="hint_word_part_of_speech">Part of speech</string>
    <string name="noun">noun</string>
    <string name="adjective">adjective</string>
    <string name="hint_word_owner">Owner</string>
    <string name="hint_dictionary_filter_owner">Owner</string>
    <string name="sort_by_owner">Sort by Owner</string>
    <string name="sort_by_title">Sort by Title</string>
    <string name="add_random_dictionaries">Add Random Dictionaries</string>
    <string name="message_dictionary_owned_by">By </string>
    <string name="message_dictionary_last_update_format">Last update by %s on %tD</string>
    <string name="message_word_owned_by">Owned By </string>
    <string name="message_word_example_sentence">Example:</string>
    <string name="message_word_definition">Definition:</string>
    <string name="hint_dictionary_filter_last_updater">Last Updater</string>
    <string name="dialog_add_dictionary">Add dictionary</string>
    <string name="hint_dictionary_name">Name</string>
    <string name="hint_dictionary_owner">Owner</string>
    <string name="hint_word_filter_owner">Owner</string>
    <string name="hint_word_filter_last_updater">Last Updater</string>
    <string name="owned_by_format"><![CDATA[Owned by <b>%s</b>]]></string>
    <string name="last_updated_by_format"><![CDATA[Last updated by <b>%s</b>]]></string>
    <string name="any_part_of_speech">Any part of speech</string>
    <string name="part_of_speech_format"><![CDATA[Part of speech is <b>%s</b>]]></string>
    <string name="message_word_last_update_format"><![CDATA[Last update by %s on %tD]]></string>
    <string name="message_word_owned_by_format"><![CDATA[Owned by %s]]></string>

    <!-- Types of food I could think of in 5 minutes -->
    <string-array name="categories">
        <item>@string/value_any_category</item>

        <item>Brunch</item>
        <item>Burgers</item>
        <item>Coffee</item>
        <item>Deli</item>
        <item>Dim Sum</item>
        <item>Indian</item>
        <item>Italian</item>
        <item>Mediterranean</item>
        <item>Mexican</item>
        <item>Pizza</item>
        <item>Ramen</item>
        <item>Sushi</item>
    </string-array>
    ite

    <!-- 50 most populous cities in the US -->
    <string-array name="cities">
        <item>@string/value_any_city</item>

        <item>Albuquerque</item>
        <item>Arlington</item>
        <item>Atlanta</item>
        <item>Austin</item>
        <item>Baltimore</item>
        <item>Boston</item>
        <item>Charlotte</item>
        <item>Chicago</item>
        <item>Cleveland</item>
        <item>Colorado Springs</item>
        <item>Columbus</item>
        <item>Dallas</item>
        <item>Denver</item>
        <item>Detroit</item>
        <item>El Paso</item>
        <item>Fort Worth</item>
        <item>Fresno</item>
        <item>Houston</item>
        <item>Indianapolis</item>
        <item>Jacksonville</item>
        <item>Kansas City</item>
        <item>Las Vagas</item>
        <item>Long Beach</item>
        <item>Los Angeles</item>
        <item>Louisville</item>
        <item>Memphis</item>
        <item>Mesa</item>
        <item>Miami</item>
        <item>Milwaukee</item>
        <item>Nashville</item>
        <item>New York</item>
        <item>Oakland</item>
        <item>Oklahoma</item>
        <item>Omaha</item>
        <item>Philadelphia</item>
        <item>Phoenix</item>
        <item>Portland</item>
        <item>Raleigh</item>
        <item>Sacramento</item>
        <item>San Antonio</item>
        <item>San Diego</item>
        <item>San Francisco</item>
        <item>San Jose</item>
        <item>Tucson</item>
        <item>Tulsa</item>
        <item>Virginia Beach</item>
        <item>Washington</item>
    </string-array>

    <!-- Price filters -->
    <string-array name="prices">
        <item>@string/value_any_price</item>

        <item>@string/price_1</item>
        <item>@string/price_2</item>
        <item>@string/price_3</item>
    </string-array>

    <!-- Ways you can sort restaurants -->
    <string-array name="sort_by">
        <item>@string/sort_by_rating</item>
        <item>@string/sort_by_popularity</item>
        <item>@string/sort_by_price</item>
    </string-array>

    <string-array name="dictionary_sort_by">
        <item>@string/sort_by_dictionary_owner</item>
        <item>@string/sort_by_dictionary_last_updater</item>
        <item>@string/sort_by_dictionary_most_recent_update</item>
        <item>@string/sort_by_dictionary_title</item>
    </string-array>

    <string-array name="word_sort_by">
        <item>@string/sort_by_word_id</item>
        <item>@string/sort_by_word_owner</item>
        <item>@string/sort_by_word_last_updater</item>
        <item>@string/sort_by_word_most_recent_update</item>
        <item>@string/sort_by_word_part_of_speech</item>
    </string-array>
a
    <string-array name="parts_of_speech">
        <item>@string/noun</item>
        <item>@string/adjective</item>
    </string-array>
</resources>
