<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <Spinner
        android:id="@+id/word_form_part_of_speech"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/parts_of_speech"
        android:hint="@string/hint_word_part_of_speech" />

    <EditText
        android:id="@+id/word_form_definition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint_word_definition" />

    <EditText
        android:id="@+id/word_form_example_sentence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint_word_example_sentence" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/word_form_cancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/greySecondary"
            android:theme="@style/ThemeOverlay.FilterButton" />


        <Button
            android:id="@+id/word_form_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit"
            android:theme="@style/ThemeOverlay.FilterButton" />

    </LinearLayout>

</merge>